layout issue fix

--- a/src/app/launch/launch.component.css
+++ b/src/app/launch/launch.component.css
@@ -109,7 +109,8 @@
       border-radius: 5px;
       color:#000;
       border-color: #d3d0d3;
-  
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
   } 
   
   .tab-pane {
@@ -126,4 +127,6 @@
       border-radius: 5px;
       color:#000;
       border-color: #d3d0d3;   
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
   }
